exclude lib, refactor lib -> dist

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib/esm",
+    "outDir": "dist/esm",
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -14,6 +14,6 @@
     "skipLibCheck": true
   },
   "exclude": [
-    "./lib"
+    "./dist"
   ]
 }
