--- a/packages/agent/tsconfig.json
+++ b/packages/agent/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib/esm",
+    "outDir": "dist/esm",
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -14,7 +14,7 @@
     "skipLibCheck": true
   },
   "exclude": [
-    "./lib"
+    "./dist"
   ],
   "references": [
     {
