--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@fort-major/ic-snap-shared",
   "version": "0.1.10",
-  "main": "./lib/cjs/index",
-  "module": "./lib/esm/index",
-  "unpkg": "./lib/esm/index",
-  "types": "./lib/esm/index.d.ts",
+  "main": "./dist/cjs/index",
+  "module": "./dist/esm/index",
+  "unpkg": "./dist/esm/index",
+  "types": "./dist/esm/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc && tsc -p tsconfig.cjs.json",
