add demo site, add login page

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,31 @@
-*/**/dist/
-*/**/target/
-target/
-*/**/node_modules/
-node_modules/
-*/**/.vscode/
-.vscode/
-*/**/.idea/
-.idea/
-*/**/.turbo/
+**/dist
+dist
+
+**/target
+target
+
+**/node_modules
+node_modules
+
+**/.vscode
+.vscode
+
+**/.idea
+.idea
+
+**/*~
+
+**/.turbo
+.turbo
+
+.env
+**/.env
+
+.DS_Store
+**/.DS_Store
+
+declarations
+**/declarations
+
+.dfx
+**/.dfx
