--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
     ],
     "pipeline": {
         "build": {
+            "dependsOn": [
+                "^build"
+            ],
             "outputs": [
                 "dist/**"
             ]
