--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite --mode dev",
+    "dev:gen": "dfx generate",
+    "dev:nns": "dfx nns install",
+    "dev:start": "dfx start --clean",
+    "dev:deploy": "dfx deploy demo_backend && node propagate-env.js",
+    "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
