--- a/apps/demo/src/backend/Cargo.toml
+++ b/apps/demo/src/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "site_backend"
+name = "demo_backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,5 +10,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.9.6"
-ic-cdk = "0.10.0"
-ic-cdk-timers = "0.4.0" # Feel free to remove this dependency if you don't need timers
+ic-cdk = "0.11.0"
+ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
