--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "dev": "dotenv -- turbo dev",
     "test": "dotenv -- turbo test",
     "dev:deploy": "dotenv -- turbo dev:deploy",
-    "dev:start": "turbo dev:start",
     "dev:nns": "turbo dev:nns",
     "dev:gen": "turbo dev:gen",
+    "cargo:repair": "turbo cargo:repair",
     "version:set": "dotenv -- turbo version:set"
   },
   "dependencies": {
