--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,9 @@
         "test": {
             "cache": false
         },
+        "cargo:repair": {
+            "cache": false
+        },
         "lint": {}
     }
 }
