thank god it works

--- a/apps/site/tsconfig.json
+++ b/apps/site/tsconfig.json
@@ -21,7 +21,7 @@
   ],
   "references": [
     {
-      "path": "../../packages/agent"
+      "path": "../../packages/client"
     },
     {
       "path": "../../packages/shared"
