--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -22,7 +22,8 @@
     "solid-styled-components": "0.28.5",
     "nanostores": "0.9.3",
     "@nanostores/solid": "0.4.2",
-    "@fort-major/ic-snap-agent": "workspace:*",
-    "@fort-major/ic-snap-shared": "workspace:*"
+    "@fort-major/ic-snap-client": "workspace:*",
+    "@fort-major/ic-snap-shared": "workspace:*",
+    "tweetnacl": "1.0.3"
   }
 }
