--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "version:set": "dotenv -- turbo version:set"
   },
   "dependencies": {
+    "@dfinity/identity": "0.19.2",
     "@dfinity/agent": "^0.19.2",
     "@dfinity/candid": "^0.19.2",
     "@dfinity/principal": "^0.19.2",
