--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,8 +7,9 @@
   "types": "./dist/esm/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && tsc -p tsconfig.cjs.json && pnpm run version:set && node inline-env-vars.js",
-    "pub": "pnpm run build && npm publish",
+    "prod:build": "tsc && tsc -p tsconfig.cjs.json && pnpm run version:set && node inline-env-vars.js",
+    "prod:pub": "pnpm run prod:build && npm publish",
+    "dev:build": "tsc && tsc -p tsconfig.cjs.json && node inline-env-vars.js",
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
