--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -5,8 +5,7 @@
     "outDir": "dist",
     "target": "ESNext",
     "module": "commonjs",
-    "declaration": true,
-    "declarationDir": "dist",
+    "noEmit": true,
     "composite": true,
     "emitDeclarationOnly": false,
     "esModuleInterop": true,
