--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,7 +19,7 @@
     "dotenv": "16.3.1"
   },
   "dependencies": {
-    "@dfinity/identity": "0.19.2",
+    "@dfinity/identity-secp256k1": "0.19.3",
     "@metamask/detect-provider": "^2.0.0",
     "@fort-major/masquerade-shared": "workspace:*"
   }
