--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -10,13 +10,13 @@
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
-    "vite": "^4.4.9",
-    "vite-plugin-solid": "^2.7.0",
+    "vite": "4.4.9",
+    "vite-plugin-solid": "2.7.0",
     "dotenv": "16.3.1"
   },
   "dependencies": {
     "@dfinity/ledger": "0.0.15",
-    "js-big-decimal": "^2.0.4",
+    "js-big-decimal": "2.0.4",
     "solid-js": "1.7.12",
     "@solidjs/router": "0.8.3",
     "@solid-primitives/event-listener": "2.3.0",
