--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,13 +14,13 @@
   },
   "devDependencies": {
     "@types/node": "20.7.1",
-    "@metamask/snaps-types": "^1.0.2",
-    "@metamask/types": "^1.1.0",
+    "@metamask/snaps-types": "1.0.2",
+    "@metamask/types": "1.1.0",
     "dotenv": "16.3.1"
   },
   "dependencies": {
     "@dfinity/identity-secp256k1": "0.19.3",
-    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/detect-provider": "2.0.0",
     "@fort-major/masquerade-shared": "workspace:*"
   }
 }
