--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,8 +16,8 @@
     "cbor-x": "1.5.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.1"
+    "@types/jest": "29.5.4",
+    "jest": "29.6.4",
+    "ts-jest": "29.1.1"
   }
 }
