--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -16,7 +16,7 @@
     "dotenv": "16.3.1"
   },
   "dependencies": {
-    "@dfinity/ledger": "0.0.15",
+    "@dfinity/ledger-icrc": "1.0.0",
     "js-big-decimal": "2.0.4",
     "solid-js": "1.7.12",
     "@solidjs/router": "0.8.3",
