--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -31,16 +31,23 @@
     "prod:pub": "pnpm run prod:build && npm publish",
     "dev:build": "tsc && mm-snap build -s src/index.ts",
     "dev": "mm-snap watch -s src/index.ts -d dist",
+    "test": "jest",
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
-    "@metamask/snaps-cli": "1.0.2",
-    "@metamask/snaps-types": "1.0.2",
-    "envify": "4.1.0"
+    "@metamask/snaps-cli": "^1.0.2",
+    "@metamask/snaps-jest": "^1.0.0",
+    "@metamask/snaps-types": "^1.0.2",
+    "@types/jest": "29.5.4",
+    "@types/node": "20.7.1",
+    "cbor-x": "1.5.4",
+    "envify": "4.1.0",
+    "jest": "29.6.4",
+    "ts-jest": "29.1.1"
   },
   "dependencies": {
     "@dfinity/identity-secp256k1": "0.19.3",
-    "@metamask/snaps-ui": "1.0.2",
-    "@fort-major/masquerade-shared": "workspace:*"
+    "@fort-major/masquerade-shared": "workspace:*",
+    "@metamask/snaps-ui": "1.0.2"
   }
 }
