--- a/apps/site/src/backend/Cargo.toml
+++ b/apps/site/src/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "demo_backend"
+name = "masquerade_backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,12 +12,11 @@ lto = true
 opt-level = 'z'
 panic = 'abort'
 
-
 [lib]
 crate-type = ["cdylib"]
 path = "src/actor.rs"
 
 [dependencies]
-candid = "0.9.6"
+candid = "0.9.9"
 ic-cdk = "0.11.0"
 ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
