--- a/apps/site/src/backend/Cargo.toml
+++ b/apps/site/src/backend/Cargo.toml
@@ -20,3 +20,4 @@ path = "src/actor.rs"
 candid = "0.9.9"
 ic-cdk = "0.11.0"
 ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
+serde = "1.0"
