--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,8 @@
     "prod:build": "tsc && tsc -p tsconfig.cjs.json && pnpm run version:set && node inline-env-vars.js",
     "prod:pub": "pnpm run prod:build && npm publish",
     "dev:build": "tsc && tsc -p tsconfig.cjs.json && node inline-env-vars.js",
+    "lint": "eslint --fix src --ext .ts --ext .tsx",
+    "format": "pnpm exec prettier src/**/*.{ts,tsx} --write",
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
