--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -13,12 +13,10 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": [
-    "./dist"
-  ],
+  "exclude": ["./dist"],
   "references": [
     {
       "path": "../shared"
     }
-  ],
+  ]
 }
