--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -11,6 +11,8 @@
     "dev:deploy": "dfx deploy masquerade_backend",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
+    "lint": "eslint --fix src --ext .ts --ext .tsx",
+    "format": "pnpm exec prettier src/**/*.{ts,tsx} --write",
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
