--- a/apps/site/tsconfig.json
+++ b/apps/site/tsconfig.json
@@ -16,9 +16,7 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
   },
-  "types": [
-    "vite/client"
-  ],
+  "types": ["vite/client"],
   "references": [
     {
       "path": "../../packages/client"
@@ -27,8 +25,5 @@
       "path": "../../packages/shared"
     }
   ],
-  "include": [
-    "src/frontend",
-    "./src/declarations"
-  ]
+  "include": ["src/frontend", "./src/declarations"]
 }
