--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -13,7 +13,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": [
-    "./dist"
-  ]
+  "exclude": ["./dist"]
 }
