--- a/turbo.json
+++ b/turbo.json
@@ -61,6 +61,11 @@
             "dependsOn": [
                 "^format"
             ]
+        },
+        "doc": {
+            "dependsOn": [
+                "^doc"
+            ]
         }
     }
 }
