--- a/apps/site/src/backend/Cargo.toml
+++ b/apps/site/src/backend/Cargo.toml
@@ -19,5 +19,6 @@ path = "src/actor.rs"
 [dependencies]
 candid = "0.9.9"
 ic-cdk = "0.11.0"
-ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
+ic-cdk-timers = "0.5.0"        # Feel free to remove this dependency if you don't need timers
 serde = "1.0"
+ic-stable-structures = "0.6.0"
