--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -8,7 +8,7 @@
     "dev:build": "pnpm run propagateEnv && tsc && vite build",
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "dev:gen": "dfx generate",
-    "dev:deploy": "dfx deploy masquerade_backend",
+    "dev:deploy": "dfx deploy msq_statistics",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
@@ -24,8 +24,11 @@
     "@dfinity/ledger-icrc": "1.0.0",
     "@fort-major/masquerade-client": "workspace:*",
     "@fort-major/masquerade-shared": "workspace:*",
+    "@solid-primitives/refs": "^1.0.5",
     "@solidjs/router": "0.8.3",
+    "chart.js": "^4.4.0",
     "js-big-decimal": "2.0.4",
+    "solid-chartjs": "^1.3.8",
     "solid-js": "1.7.12",
     "solid-styled-components": "0.28.5",
     "tweetnacl": "1.0.3"
