add plushie world

--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -14,7 +14,10 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsxImportSource": "solid-js",
+    "paths": {
+      "#assets/*": ["./assets/*"]
+    }
   },
   "types": ["vite/client"],
   "references": [
