--- a/apps/demo/src/backend/Cargo.toml
+++ b/apps/demo/src/backend/Cargo.toml
@@ -12,12 +12,12 @@ lto = true
 opt-level = 'z'
 panic = 'abort'
 
-
 [lib]
 crate-type = ["cdylib"]
-path = "src/actor.rs"
 
 [dependencies]
+ic-ledger-types = "0.8.0"
 candid = "0.9.6"
+serde = "1"
 ic-cdk = "0.11.0"
-ic-cdk-timers = "0.5.0" # Feel free to remove this dependency if you don't need timers
+ic-cdk-timers = "0.5.0"   # Feel free to remove this dependency if you don't need timers
