--- a/apps/demo/src/backend/Cargo.toml
+++ b/apps/demo/src/backend/Cargo.toml
@@ -16,8 +16,8 @@ panic = 'abort'
 crate-type = ["cdylib"]
 
 [dependencies]
-ic-ledger-types = "0.8.0"
+ic-ledger-types = { path = "../../../../../cdk-rs-main/library/ic-ledger-types" }
 candid = "0.9.6"
 serde = "1"
 ic-cdk = "0.11.0"
-ic-cdk-timers = "0.5.0"   # Feel free to remove this dependency if you don't need timers
+ic-cdk-timers = "0.5.0"                                                           # Feel free to remove this dependency if you don't need timers
