--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "3.0.3",
     "typedoc": "^0.25.2",
     "typescript": "^5.2.2",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
