--- a/example.env
+++ b/example.env
@@ -1,5 +1,13 @@
+# for dev
 MSQ_SNAP_VERSION="0.2.0"
 MSQ_SNAP_ID="local:http://localhost:8081"
 MSQ_SNAP_SITE_ORIGIN="http://localhost:8000"
 MSQ_DFX_NETWORK_HOST="http://localhost:8080"
 MSQ_MODE="DEV"
+
+# for prod
+MSQ_SNAP_VERSION="0.2.0"
+MSQ_SNAP_ID="npm:@fort-major/masquerade"
+MSQ_SNAP_SITE_ORIGIN="https://2jo3k-paaaa-aaaak-afdqa-cai.icp0.io"
+MSQ_DFX_NETWORK_HOST="ic0.app"
+MSQ_MODE="PROD"
