make it work in FireFox, switch to non-cdn build

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,15 +1,19 @@
 {
   "name": "masquerade-site",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "prod:build": "pnpm run propagateEnv && pnpm run version:set && tsc && vite build",
     "prod:deploy": "dfx deploy --network=ic",
+    "prod:deployFE": "dfx deploy msq_frontend --no-asset-upgrade --network=ic",
+    "prod:deployBE": "dfx deploy msq_statistics --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "dev:gen": "dfx generate",
     "dev:deploy": "dfx deploy",
+    "dev:deployFE": "dfx deploy msq_frontend --no-asset-upgrade",
+    "dev:deployBE": "dfx deploy msq_statistics",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
