--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "prod:build": "dotenv -e .env.prod -- turbo prod:build",
     "prod:pub": "dotenv -e .env.prod -- turbo prod:pub",
     "prod:deploy": "dotenv -e .env.prod -- turbo prod:deploy",
+    "prod:deployFE": "dotenv -e .env.prod -- turbo prod:deployFE",
+    "prod:deployBE": "dotenv -e .env.prod -- turbo prod:deployBE",
     "dev": "dotenv -e .env.dev -- turbo dev",
     "dev:build": "dotenv -e .env.dev -- turbo dev:build",
     "dev:deploy": "dotenv -e .env.dev -- turbo dev:deploy",
+    "dev:deployFE": "dotenv -e .env.dev -- turbo dev:deployFE",
+    "dev:deployBE": "dotenv -e .env.dev -- turbo dev:deployBE",
     "dev:nns": "turbo dev:nns",
     "dev:gen": "turbo dev:gen",
+    "dev:runSnap": "dotenv -e .env.dev -- turbo dev:runSnap",
     "test": "dotenv -e .env.dev -- turbo test",
     "lint": "turbo lint",
     "format": "turbo format",
