--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,17 +1,21 @@
 {
   "name": "masquerade-demo",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "prod:build": "pnpm run propagateEnv && pnpm run version:set && tsc && vite build",
     "prod:deploy": "dfx deploy --network=ic",
+    "prod:deployFE": "dfx deploy demo_frontend --no-asset-upgrade --network=ic",
+    "prod:deployBE": "dfx deploy demo_backend --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "dev:gen": "dfx generate",
     "dev:nns": "dfx nns install",
     "dev:start": "dfx start --clean",
     "dev:deploy": "dfx deploy",
+    "dev:deployFE": "dfx deploy demo_frontend --no-asset-upgrade",
+    "dev:deployBE": "dfx deploy demo_backend",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
