--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fort-major/masquerade-client",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "./dist/cjs/index",
   "module": "./dist/esm/index",
   "unpkg": "./dist/esm/index",
@@ -16,13 +16,13 @@
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
-    "@types/node": "20.7.1",
     "@metamask/snaps-types": "1.0.2",
     "@metamask/types": "1.1.0",
+    "@types/node": "20.7.1",
     "dotenv": "16.3.1"
   },
   "dependencies": {
-    "@metamask/detect-provider": "2.0.0",
-    "@fort-major/masquerade-shared": "workspace:*"
+    "@fort-major/masquerade-shared": "workspace:*",
+    "@metamask/detect-provider": "2.0.0"
   }
 }
