make it work on local env

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,9 +10,7 @@
     "prod:deployBE": "dfx deploy demo_backend --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
     "dev": "pnpm run propagateEnv && vite --mode dev",
-    "dev:gen": "dfx generate",
-    "dev:nns": "dfx nns install",
-    "dev:start": "dfx start --clean",
+    "gen": "dfx generate",
     "dev:deploy": "dfx deploy",
     "dev:deployFE": "dfx deploy demo_frontend --no-asset-upgrade",
     "dev:deployBE": "dfx deploy demo_backend",
