--- a/example.env
+++ b/example.env
@@ -8,6 +8,6 @@ MSQ_MODE="DEV"
 # for prod
 MSQ_SNAP_VERSION="0.2.0"
 MSQ_SNAP_ID="npm:@fort-major/masquerade"
-MSQ_SNAP_SITE_ORIGIN="https://2jo3k-paaaa-aaaak-afdqa-cai.icp0.io"
+MSQ_SNAP_SITE_ORIGIN="https://msq.tech"
 MSQ_DFX_NETWORK_HOST="ic0.app"
 MSQ_MODE="PROD"
