--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masquerade-site",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -32,6 +32,7 @@
     "@solid-primitives/refs": "^1.0.5",
     "@solidjs/router": "0.8.3",
     "chart.js": "^4.4.0",
+    "ismobilejs": "^1.1.1",
     "js-big-decimal": "2.0.4",
     "solid-chartjs": "^1.3.8",
     "solid-js": "1.7.12",
