--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "masquerade-demo",
   "version": "0.2.3",
+  "type": "module",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -21,13 +22,13 @@
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
-    "vite": "^4.4.9",
-    "vite-plugin-solid": "^2.7.0",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "vite": "5.0.5",
+    "vite-plugin-solid": "2.7.2"
   },
   "dependencies": {
-    "solid-js": "1.7.12",
-    "@solidjs/router": "0.8.3",
+    "solid-js": "1.8.7",
+    "@solidjs/router": "0.9.1",
     "solid-styled-components": "0.28.5",
     "@fort-major/masquerade-client": "workspace:*"
   }
