--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,6 +1,7 @@
 {
   "name": "masquerade-site",
   "version": "0.2.3",
+  "type": "module",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -22,21 +23,19 @@
   },
   "devDependencies": {
     "dotenv": "16.3.1",
-    "vite": "4.4.9",
-    "vite-plugin-solid": "2.7.0"
+    "vite": "5.0.5",
+    "vite-plugin-solid": "2.7.2"
   },
   "dependencies": {
-    "@dfinity/ledger-icrc": "1.0.0",
+    "@dfinity/ledger-icrc": "2.0.0",
     "@fort-major/masquerade-client": "workspace:*",
     "@fort-major/masquerade-shared": "workspace:*",
-    "@solid-primitives/refs": "^1.0.5",
-    "@solidjs/router": "0.8.3",
-    "chart.js": "^4.4.0",
-    "ismobilejs": "^1.1.1",
+    "@solidjs/router": "0.9.1",
+    "chart.js": "4.4.1",
+    "ismobilejs": "1.1.1",
     "js-big-decimal": "2.0.4",
-    "solid-chartjs": "^1.3.8",
-    "solid-js": "1.7.12",
-    "solid-styled-components": "0.28.5",
-    "tweetnacl": "1.0.3"
+    "solid-chartjs": "1.3.8",
+    "solid-js": "1.8.7",
+    "solid-styled-components": "0.28.5"
   }
 }
