--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
     "cargo:repair": "turbo cargo:repair"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.19.3",
-    "@dfinity/candid": "^0.19.3",
-    "@dfinity/identity": "0.19.3",
-    "@dfinity/principal": "^0.19.3",
-    "zod": "^3.22.2"
+    "@dfinity/agent": "0.20.2",
+    "@dfinity/candid": "0.20.2",
+    "@dfinity/identity": "0.20.2",
+    "@dfinity/principal": "0.20.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-solid": "^0.13.0",
-    "glob": "^10.3.4",
-    "prettier": "3.0.3",
-    "typedoc": "^0.25.2",
-    "typescript": "^5.2.2",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-eslint": "^1.8.1"
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
+    "eslint": "8.55.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard-with-typescript": "40.0.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-n": "16.3.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-solid": "0.13.0",
+    "glob": "10.3.10",
+    "prettier": "3.1.0",
+    "typedoc": "0.25.4",
+    "typescript": "5.3.2",
+    "vite-plugin-compression": "0.5.1",
+    "vite-plugin-eslint": "1.8.1"
   }
 }
