--- a/apps/site/public/.ic-assets.json5
+++ b/apps/site/public/.ic-assets.json5
@@ -24,7 +24,7 @@
       //   See: https://github.com/WebAssembly/content-security-policy/blob/main/proposals/CSP.md.
       // - We added img-src data: because data: images are used often.
       // - frame-ancestors: none mitigates clickjacking attacks. See https://owasp.org/www-community/attacks/Clickjacking.
-      "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-eval' https://cdnjs.cloudflare.com 'sha256-348d5w9kJu4h+i+sr85I6ciPXEchcniZs0NAIVvrUxM=';connect-src 'self' https://icp0.io https://ic0.app https://*.ic0.app https://*.icp0.io;img-src 'self' data:;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
+      "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-eval' https://cdnjs.cloudflare.com 'sha256-348d5w9kJu4h+i+sr85I6ciPXEchcniZs0NAIVvrUxM=' 'sha256-avpYSMhuJi9WJxyEjI6GYMe1nMx5fWui+MNt0GpU354=';connect-src 'self' https://icp0.io https://ic0.app https://*.ic0.app https://*.icp0.io;img-src 'self' data:;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
 
       // Security: The permissions policy disables all features for security reasons. If your site needs such permissions, activate them.
       // To configure permissions go here https://www.permissionspolicy.com/
