--- a/example.env
+++ b/example.env
@@ -9,5 +9,5 @@ MSQ_MODE="DEV"
 MSQ_SNAP_VERSION="0.2.0"
 MSQ_SNAP_ID="npm:@fort-major/masquerade"
 MSQ_SNAP_SITE_ORIGIN="https://msq.tech"
-MSQ_DFX_NETWORK_HOST="ic0.app"
+MSQ_DFX_NETWORK_HOST="icp0.io"
 MSQ_MODE="PROD"
