--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -27,9 +27,9 @@
   },
   "homepage": "https://icp.msq.tech",
   "scripts": {
-    "prod:build": "tsc && pnpm run version:set && pnpm run prod:build-snap && mm-snap manifest --fix",
+    "prod:build": "tsc && pnpm run version:set && pnpm run prod:build-snap",
     "prod:build-snap": "mm-snap build -s ./src/index.ts",
-    "prod:pub": "npm publish",
+    "prod:pub": "mm-snap manifest --fix && npm publish",
     "dev:build": "tsc && mm-snap build -s ./src/index.ts",
     "dev": "mm-snap watch -s ./src/index.ts -d dist",
     "dev:runSnap": "pnpm run dev",
